feat(backend): add springdoc openapi documentation with jwt auth and externalized cors